# SGM-Helper

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  backend.md  service.md
.github/workflows/: ci.yml  release.yml
docs/gamecube/: backend-worker-notes.md  install.md  protocol-notes.md
docs/mister/: install.md  protocol-notes.md
docs/steamdeck/: install.md  protocol-notes.md
docs/windows/: install.md  protocol-notes.md
helpers/anbernic/: README.md
helpers/gamecube/: Makefile  README.md
helpers/gamecube/include/: sgm_gc.h
helpers/gamecube/src/: app.c  app.h  backend.c  backend.h  discovery.c  discovery.h  json_helpers.c  json_helpers.h  main.c  memory_card.c  memory_card.h  net_http.c  net_http.h  platform.c  platform.h  secure_store.c  secure_store.h  ui.c  ui.h
helpers/mister/: Cargo.toml  README.md
helpers/mister/config/: config.ini.example
helpers/mister/src/: api.rs  backend_config.rs  cli.rs  config.rs  lib.rs  main.rs  scanner.rs  service.rs  sources.rs  state.rs  syncer.rs  watcher.rs
helpers/mister/tests/: api_contract.rs  e2e_smoke.rs
helpers/steamdeck/: Cargo.toml  README.md
helpers/steamdeck/config/: config.ini.example
helpers/steamdeck/src/: api.rs  backend_config.rs  cli.rs  config.rs  lib.rs  main.rs  ports.rs  scanner.rs  scheduler.rs  service.rs  sources.rs  state.rs  syncer.rs  watcher.rs
helpers/steamdeck/tests/: api_contract.rs  e2e_smoke.rs
helpers/windows/: Cargo.toml  README.md
helpers/windows/config/: config.ini.example
helpers/windows/src/: api.rs  backend_config.rs  cli.rs  config.rs  lib.rs  main.rs  (+6 more)
(+6 files in other folders)
