[package]
name = "sgm-steamdeck-helper"
version = "0.4.8"
edition = "2024"
license = "MIT"
description = "Steam Deck helper for SGM self-hosted save sync"

[dependencies]
aes = "0.8"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.5"
hex = "0.4"
hostname = "0.4"
md5 = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "macros"] }
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
httpmock = "0.8"
predicates = "3.1"
tempfile = "3.15"
